--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,6 @@
 @import 'normalize';
+@import '../bootstrap-5.0.2-dist/css/bootstrap.min.css';
+@import '../fontawesome/css/all.css';
 @import 'variables';
 @import 'home';
 @import 'team';
